--- a/templates/settings/partials/lead_preference.html
+++ b/templates/settings/partials/lead_preference.html
@@ -206,6 +206,24 @@
             <p class="mb-6 font-normal text-sm text-gray-700 dark:text-gray-400">Configure default scheduling options for your lead generation campaigns.</p>
 
             <div class="grid grid-cols-1 md:grid-cols-1 gap-4 mb-8">
+                <div class="flex items-center ps-4 border border-gray-300 rounded-sm dark:border-gray-700">
+                    <input id="bordered-radio-1" type="radio" value="" name="bordered-radio" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                    <div class="flex items-center py-4 ms-2">
+                        <svg class="w-5 h-5 text-gray-500 dark:text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                        <label for="bordered-radio-1" class="text-sm font-medium text-gray-900 dark:text-gray-300">One Time Campaign</label>
+                    </div>
+                </div>
+                <div class="flex items-center ps-4 border border-gray-300 rounded-sm dark:border-gray-700">
+                    <input id="bordered-radio-1" type="radio" value="" name="bordered-radio" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                    <div class="flex items-center py-4 ms-2">
+                        <svg class="w-5 h-5 text-gray-500 dark:text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z" />
+                        </svg>
+                        <label for="bordered-radio-1" class="text-sm font-medium text-gray-900 dark:text-gray-300">Recurring Campaign</label>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
