Repeat frequency container when recurring campaign is clicked

--- a/templates/settings/partials/lead_preference.html
+++ b/templates/settings/partials/lead_preference.html
@@ -225,6 +225,24 @@
                     </div>
                 </div>
             </div>
+
+
+            <div id="repeat-frequency" class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-4 dark:bg-gray-900 dark:border-gray-700" style="border-left-width: 4px; border-left-color: #212121;">
+                <div class="flex items-start">
+                    <div class="">
+                        <div class="flex-1" id="repeat-frequency" style="display: block;">
+                            <label for="repeat_days" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Repeat
+                                Every (Days)
+                            </label>
+                            <div class="flex items-center gap-2">
+                                <input type="number" id="repeat_days" name="repeat_days" min="1" max="30" value="7" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 w-20 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500">
+                                <span class="text-sm font-medium text-gray-900 dark:text-white">days</span>
+                            </div>
+                            <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Campaign will automatically repeat every 7 days</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
