--- a/templates/settings/partials/lead_preference.html
+++ b/templates/settings/partials/lead_preference.html
@@ -1,5 +1,10 @@
 <div id="notes-{{ lead.id }}" role="tabpanel" class="hidden opacity-0">
-
+    <div class="mb-6 p-2">
+        <h3 class="text-xl font-bold text-gray-900 dark:text-white">Lead Generation
+            Preferences
+        </h3>
+        <p class="text-sm text-gray-700 dark:text-gray-400">Configure default settings for your lead generation campaigns to streamline your workflow.</p>
+    </div>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="mb-4 p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -247,20 +252,16 @@
     </div>
 
 
-    <div class="mb-6">
-        <h3 class="text-xl font-bold text-gray-900 dark:text-white">Lead Generation
-            Preferences
-        </h3>
-        <p class="text-sm text-gray-700 dark:text-gray-400">Customize how HabitatHunt finds
-            and filters leads for you.</p>
-    </div>
+
 
 
 
     <!-- Save Button -->
-    <button type="button" class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
-        Save Preferences
-    </button>
+    <div class="flex py-2">
+        <button type="button" class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+            Save Preferences
+        </button>
+    </div>
 </div>
 
 <script>
