Decouple hashtags from platforms

--- a/templates/settings/partials/hashtag_items.html
+++ b/templates/settings/partials/hashtag_items.html
@@ -6,7 +6,7 @@
         <label for="hashtag-{{ hashtag.id }}" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">#{{ hashtag.name }}</label>
     </div>
     <span class="bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-        {{ hashtag.platform.name }}
+        Default
     </span>
 </div>
 {% endfor %}
