--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -2,10 +2,8 @@
 <div class="mb-4 mt-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-3">
     {% for hashtag in hashtags %}
     <div class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
-        <div class="flex mb-4">
+        <div class="flex justify-between items-center mb-4">
             <input id="checkbox-{{ hashtag.id }}" name="selected_hashtags" value="{{ hashtag.id }}" type="checkbox" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-        </div>
-        <div class="flex justify-between items-start mb-2">
             <button id="dropdownButton" data-dropdown-toggle="dropdown-{{ hashtag.id }}" class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5" type="button">
                 <span class="sr-only">Open dropdown</span>
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 3">
