Country, Province, City and CustomLocation models

--- a/templates/settings/partials/cities.html
+++ b/templates/settings/partials/cities.html
@@ -36,6 +36,5 @@
 
 <!-- City List -->
 <div id="city-list" class="rounded-lg border border-gray-200 dark:border-gray-700 p-2 max-h-64 overflow-y-auto">
-    <!-- Your actual city content here -->
-    <p class="text-gray-600 dark:text-gray-400">City selection content goes here</p>
+    {% include 'settings/partials/locations/city_items.html' %}
 </div>
