--- a/templates/settings/partials/custom_locations.html
+++ b/templates/settings/partials/custom_locations.html
@@ -36,6 +36,5 @@
 
 <!-- Custom Location List -->
 <div id="custom-locations-list" class="rounded-lg border border-gray-200 dark:border-gray-700 p-2 max-h-64 overflow-y-auto">
-    <!-- Your actual custom location content here -->
-    <p class="text-gray-600 dark:text-gray-400">Custom location selection content goes here</p>
+    {% include 'settings/partials/locations/custom_location_items.html' %}
 </div>
