--- a/templates/settings/partials/provinces.html
+++ b/templates/settings/partials/provinces.html
@@ -36,6 +36,5 @@
 
 <!-- Province List -->
 <div id="province-list" class="rounded-lg border border-gray-200 dark:border-gray-700 p-2 max-h-64 overflow-y-auto">
-    <!-- Your actual province content here -->
-    <p class="text-gray-600 dark:text-gray-400">Province selection content goes here</p>
+    {% include 'settings/partials/locations/province_items.html' %}
 </div>
