--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -60,6 +60,37 @@
 
             </li>
             <li>
+                <a href="{% url 'locations:locations' %}"
+                    class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group {% if request.resolver_match.url_name == 'locations' %}bg-gray-100 dark:bg-gray-700{% endif %} hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
+                   
+                    <svg class="flex-shrink-0 w-6 h-6 {% if request.resolver_match.url_name == 'hashtags' %}text-green-500 dark:text-green-500{% else %}text-gray-500{% endif %} transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.8 13.938h-.011a7 7 0 1 0-11.464.144h-.016l.14.171c.1.127.2.251.3.371L12 21l5.13-6.248c.194-.209.374-.429.54-.659l.13-.155Z"/>
+                      </svg>
+                      
+
+                    <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Manage Locations</span>
+
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'hashtags:hashtags' %}"
+                    class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group {% if request.resolver_match.url_name == 'hashtags' %}bg-gray-100 dark:bg-gray-700{% endif %} hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
+                    <svg class="flex-shrink-0 w-6 h-6 {% if request.resolver_match.url_name == 'hashtags' %}text-green-500 dark:text-green-500{% else %}text-gray-500{% endif %} transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-hash">
+                        <line x1="4" x2="20" y1="9" y2="9" />
+                        <line x1="4" x2="20" y1="15" y2="15" />
+                        <line x1="10" x2="8" y1="3" y2="21" />
+                        <line x1="16" x2="14" y1="3" y2="21" />
+                    </svg>
+
+                    <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Manage Hashtags</span>
+
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'targets:targets' %}"
                     class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group {% if request.resolver_match.url_name == 'targets' %}bg-gray-100 dark:bg-gray-700{% endif %} hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
 
@@ -78,27 +109,8 @@
                 </a>
 
             </li>
-            <li>
-
-                <a href="{% url 'hashtags:hashtags' %}"
-                    class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group {% if request.resolver_match.url_name == 'hashtags' %}bg-gray-100 dark:bg-gray-700{% endif %} hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
-                    <svg class="flex-shrink-0 w-6 h-6 {% if request.resolver_match.url_name == 'hashtags' %}text-green-500 dark:text-green-500{% else %}text-gray-500{% endif %} transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
-                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-hash">
-                        <line x1="4" x2="20" y1="9" y2="9" />
-                        <line x1="4" x2="20" y1="15" y2="15" />
-                        <line x1="10" x2="8" y1="3" y2="21" />
-                        <line x1="16" x2="14" y1="3" y2="21" />
-                    </svg>
-
-                    <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Manage Hashtags</span>
-
-                </a>
-
-
-
-            </li>
+            
+            
             <li>
                 <a href="{% url 'settings:settings' %}"
                     class="flex items-center p-2 text-base text-gray-900  {% if request.resolver_match.url_name == 'settings' %}bg-gray-100 dark:bg-gray-700{% endif %} rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700 ">
